# ros2_checkersgame_ur5e

./: README.md
RobotiqHandeROS2Driver-main/RobotiqHandeROS2Driver-main/robotiq_hande_ros2_driver/launch/: gripper_bringup.launch.py
RobotiqHandeROS2Driver-main/RobotiqHandeROS2Driver-main/robotiq_hande_ros2_driver/robotiq_hande_ros2_driver/: robotiq_gripper.py
checkers_game/: package.xml  setup.cfg  setup.py
checkers_game/checkers_game/: checkers_node.py  constants.py
checkers_game/checkers_game/camera/: board_detection.py  calibration_parameters.npz  calibration_parameters_2.npz  calibration_parameters_ncr.npz  ximea_camera.py
checkers_game/checkers_game/checkers/: board.py  game.py  piece.py
checkers_game/checkers_game/minimax/: algorithm.py
checkers_game/launch/: checkers_game_launch.launch.py
checkers_game_tutorial/: package.xml  setup.cfg  setup.py
checkers_game_tutorial/checkers_game_tutorial/: checkers_node.py
checkers_game_tutorial/checkers_game_tutorial/checkers/: board.py  constants.py  game.py  piece.py
checkers_game_tutorial/checkers_game_tutorial/minimax/: algorithm.py
checkers_game_tutorial/launch/: checkers_game_launch.launch.py
checkers_msgs/: CMakeLists.txt  package.xml
checkers_msgs/msg/: Board.msg  HandDetected.msg  Move.msg  Piece.msg  RobotMove.msg
checkers_msgs/srv/: ResumeMovement.srv
cocohrip_moveit_control/: CMakeLists.txt
cocohrip_moveit_control/include/cocohrip_moveit_control/: ur_position_control.hpp
cocohrip_moveit_control/launch/: ur_position_control.launch.py
cocohrip_moveit_control/src/: ur_position_control.cpp  ur_position_control_node.cpp
leap_gesture_interface/: CMakeLists.txt  README.md
leap_gesture_interface/src/: gesture_interface_node.cpp  gesture_interface_node_v01.txt  leap_interface_example.cpp
robot_control/: CMakeLists.txt
robot_control/include/robot_control/: Mission.hpp  RobotControlNode.hpp
robot_control/launch/: robot_control_launch.py  robot_control_launch_board.launch.py  robot_driver_launch.launch.py
robot_control/rviz/: rviz_config_file.rviz
robot_control/src/: Mission.cpp  RobotControlMain.cpp  RobotControlNode.cpp  robot_control.cpp  robot_data.csv  robot_data_1.csv  robot_data_11.csv  robot_data_12.csv  robot_data_16.csv  robot_data_17.csv  robot_data_2.csv  robot_data_20.csv  robot_data_21.csv  robot_data_22.csv  robot_data_26.csv  robot_data_28.csv  robot_data_3.csv  robot_data_33.csv  robot_data_35.csv  robot_data_39.csv  robot_data_4.csv  robot_data_42.csv  robot_data_48.csv  robot_data_5.csv  robot_data_6.csv  robot_data_68.csv  robot_data_7.csv  robot_data_73.csv  robot_data_76.csv  robot_data_77.csv  robot_data_88.csv  robot_data_89.csv  robot_data_90.csv  robot_data_92.csv  robot_data_95.csv  robot_data_97.csv  robot_data_98.csv  robot_data_99.csv
urk_ur_launch/: CMakeLists.txt  package.xml
urk_ur_launch/etc/: ur.urdf.xacro  ur5e_cocohrip_calibration.yaml
urk_ur_launch/launch/: ur5e_cocohrip.launch.py
urk_ur_launch/meshes/collision_objects/: collision_objects.xacro  table.stl
urk_ur_launch/urdf/: ur.urdf.xacro  ur.urdf_old.xacro
